# emu48android-linux

./: .gitignore  Makefile  README.md  ReadMe.txt  build.gradle  gen-keystore.sh  gradle.properties  local.properties.sample  make-linux-compatible.sh  pull-KMLs-and-ROMs.sh  pull-emu48plus-sources.sh
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/org/emulator/forty/eight/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: Emu48.htm  ReadMe.txt
app/src/main/assets/calculators/: CP_48G3.KML  CP_48S3.KML  DEFAUL38.KML  DEFAULTG.KML  DEFAULTS.KML  FLOAT_GX.KML  JEMAC.KML  Keyb38G.kmi  Keyboard.kmi  Wombat3 48GX.kml  Wombat3 48SX.kml  calypso4k.kml  keyb38.kmi  keyb3940.kmi  keyb48-old.kmi  keyb48.kmi  keyb49g.kmi  readme-rom.49g.txt  real38g-l.kml  real38g-lc.kml  real39g-l.kml  real39g-lc.kml  real39gp-l.kml  real39gp-lc.kml  real39gs-l.kml  real39gs-lc.kml  real40g-l.kml  real40g-lc.kml  real40gs-l.kml  real40gs-lc.kml  real48gii-l.kml  real48gii-lc.kml  real48gx-l.kml  real48gx-lc.kml  real48sx-l.kml  real48sx-lc.kml  real49g-l.kml  real49g-lc.kml  real49gp-l.kml  real49gp-lc.kml  (+5 more)
app/src/main/assets/calculators/realcalcs-docs/: keyboard-layout-38.json  keyboard-layout-3940.json  keyboard-layout-48.json  keyboard-layout-49g.json  realcalcs.txt
app/src/main/assets/calculators/realcalcsplus-docs/: keyboard-layout-4950.json  keyboard-layout-scancodes.json  realcalcsplus.txt
app/src/main/cpp/: android-emu.c  android-layer.c  emu-jni.c  emu.h  win32-layer.c  win32-layer.h
app/src/main/cpp/core/: apple.c  apple.h  cursor.c  ddeserv.c.unused  debugdll.c  debugger.c  debugger.c.unused  disasm.c  dismem.c  display.c  disrpl.c  emu48.c  emu48.h  emu48dll.c  emu48dll.h  engine.c  external.c  fetch.c  files.c  i28f160.c  keyboard.c  keymacro.c  kml.c  lowbat.c  mops.c  mru.c  opcodes.c  ops.h  pch.h  redeye.c  romcrc.c  rpl.c  serial.c  settings.c  sndenum.c.unused  sound.c  stack.c  symbfile.c  timer.c  types.h  (+1 more)
app/src/main/cpp/emu48plus/: CHANGES.TXT  EMU48.DSP  EMU48.DSW  EMU48.RC  EMU48.XML  EMU48DLL.DSP  EMU48DLL.DSW  apple.c  apple.h  changes.txt  color.h  cursor.c  ddeserv.c  debugdll.c  debugger.c  debugger.h  disasm.c  dismem.c  display.c  disrpl.c  disrpl.h  emu48.c  emu48.dsp  emu48.h  emu48.rc  emu48dll.c  emu48dll.dsp  emu48dll.dsw  emu48dll.h  engine.c  external.c  fetch.c  files.c  i28f160.c  i28f160.h  io.h  keyboard.c  keymacro.c  kml.c  kml.h  (+24 more)
app/src/main/cpp/win32/: commctrl.h  conio.h  crtdbg.h  direct.h  shellapi.h  shlobj.h  tchar.h  windows.h  winsock2.h  ws2tcpip.h
app/src/main/java/eu/luoi/calculator/: EmuApplication.java  InfoFragment.java  InfoWebFragment.java  LCDOverlappingView.java  MainScreenView.java  NativeLib.java  PanAndScaleView.java  PrinterSimulator.java  PrinterSimulatorFragment.java  Serial.java  Settings.java  Utils.java  ViewPagerNoSwipe.java
app/src/main/java/eu/luoi/calculator/usbserial/: CustomProber.java  DevicesDialogFragment.java  (+1 more)
app/src/main/java/org/emulator/calculator/: EmuApplication.java  InfoFragment.java  InfoWebFragment.java  LCDOverlappingView.java  MainScreenView.java  NativeLib.java  PanAndScaleView.java  PrinterSimulator.java  PrinterSimulatorFragment.java  Serial.java  Settings.java  Utils.java  ViewPagerNoSwipe.java
app/src/main/res/drawable/: ic_file_copy_black_24dp.xml  ic_keyboard_backspace_black_24dp.xml  ic_keyboard_backspace_white_24dp.xml  ic_print_black_24dp.xml  ic_save_alt_black_24dp.xml
app/src/main/res/layout/: alert_manage_flash_rom.xml  app_bar_main.xml  content_main.xml  device_list_header.xml  fragment_info.xml  fragment_printer_simulator.xml  fragment_serial.xml  fragment_settings.xml  fragment_web_info.xml  nav_header_main.xml  tab_content_page_printer_graphic.xml  tab_content_page_printer_text.xml
app/src/main/res/menu/: activity_main_drawer.xml  fragment_printer_simulator.xml  fragment_settings.xml  menu_main.xml
app/src/main/res/values/: arrays.xml  colors.xml  dimens.xml  ids.xml  strings.xml  styles.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/xml/: pref_general.xml
(+28 files in other folders)
